<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">EZ Talk</string>
    <string name="default_notification_channel_id">default_channel</string>
    <string name="mic_button">mic_button</string>
    <string name="someone_is_calling">someone is calling</string>
    <string name="accpet_button">accpet button</string>
    <string name="reject_button">reject button</string>
    <string name="who_to_call">who to call ?</string>
    <string name="mute_unmute_mic" />
    <string name="video_button">video button</string>
    <string name="welcome_title">Welcome back! Glad to see you, Again!</string>
    <string name="welcome_subtitle">Join the chat and start talking with your friends and family</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="register_title">Hello! Register to get started</string>
    <string name="create_account">Create Account</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="forgot_password_title">Forgot Password?</string>
    <string name="forgot_password_subtitle">Don\'t worry! It occurs. Please enter the email address linked with your account.</string>
    <string name="send_code">Send Code</string>
    <string name="remember_password">Remember Password?</string>
    <string name="register_subtitle">Create your account to join our community</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="apple">Apple</string>
    <string name="default_web_client_id">883050824460-cm743j715pjfaub4mid99bsfca0hm42t.apps.googleusercontent.com</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="otp_subtitle">Enter the verification code we just sent on your email address.</string>
    <string name="verify">Verify</string>
    <string name="didnt_receive_code">Didn\'t receive code?</string>
    <string name="resend">Resend</string>
    <string name="create_new_password">Create new password</string>
    <string name="create_password_subtitle">Your new password must be unique from those previously used.</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="password_changed">Password Changed!</string>
    <string name="password_changed_subtitle">Your password has been changed successfully.</string>
    <string name="back_to_login">Back to Login</string>
    <string name="or_login_with">Or Login with</string>
    <string name="or_register_with">Or Register with</string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="register_now">Register Now</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="login_now">Login Now</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="full_name">Full Name</string>
    <string name="home">Home</string>
    <string name="chats">Chats</string>
    <string name="calls">Calls</string>
    <string name="contacts">Contacts</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="study_room">Study Room</string>
    <string name="type_message">Type a message...</string>
    <string name="send">Send</string>
    <string name="online">Online</string>
    <string name="offline">Offline</string>
    <string name="typing">typing...</string>
    <string name="last_seen">Last seen %s</string>
    <string name="create_group">Create Group</string>
    <string name="group_name">Group Name</string>
    <string name="add_members">Add Members</string>
    <string name="join_channel">Join Channel</string>
    <string name="voice_channels">Voice Channels</string>
    <string name="text_channels">Text Channels</string>
    <string name="members">Members</string>
    <string name="member_count">%d members</string>
    <string name="direct_messages">Direct Messages</string>
    <string name="group_messages">Group Messages</string>
    <string name="recent_chats">Recent Chats</string>
    <string name="no_messages">No messages yet</string>
    <string name="start_conversation">Start a conversation</string>
    <string name="friends">Friends</string>
    <string name="online_friends">Online - %d</string>
    <string name="all_friends">All Friends - %d</string>
    <string name="add_friend">Add Friend</string>
    <string name="friend_requests">Friend Requests</string>
    <string name="blocked_users">Blocked Users</string>
    <string name="incoming_call">Incoming Call</string>
    <string name="outgoing_call">Outgoing Call</string>
    <string name="voice_call">Voice Call</string>
    <string name="video_call">Video Call</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="end_call">End Call</string>
    <string name="mute">Mute</string>
    <string name="unmute">Unmute</string>
    <string name="speaker">Speaker</string>
    <string name="call_duration">%s</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="done">Done</string>
    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="loading">Loading...</string>
    <string name="error">Error</string>
    <string name="success">Success</string>
    <string name="retry">Retry</string>
    <string name="search">Search</string>
    <string name="search_hint">Search...</string>
    <string name="more">More</string>
    <string name="back">Back</string>
    <string name="close">Close</string>
    <string name="clear">Clear</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="leave">Leave</string>
    <string name="just_now">Just now</string>
    <string name="minutes_ago">%d min ago</string>
    <string name="hours_ago">%d hours ago</string>
    <string name="yesterday">Yesterday</string>
    <string name="today">Today</string>
    <string name="teacher">Teacher</string>
    <string name="student">Student</string>
    <string name="select_role">Select your role</string>
    <string name="view_profile">View Profile</string>
    <string name="block_user">Block User</string>
    <string name="unblock_user">Unblock User</string>
    <string name="report_user">Report User</string>
    <string name="logout">Logout</string>
    <string name="add_friend_description">Enter username or email to add friend</string>
    <string name="username_or_email_hint">Username or email</string>
    <string name="add">Add</string>
    <string name="add_friend_button">Add Friend</string>
    <string name="create">Create</string>
    <string name="group_icon">Group Icon</string>
    <string name="add_group_icon">Add Group Icon</string>
    <string name="enter_group_name">Enter group name</string>
    <string name="group_description_optional">Group description (optional)</string>
    <string name="enter_group_description">Enter group description</string>
    <string name="search_contacts">Search contacts</string>
    <string name="group_info">Group Info</string>
    <string name="media">Media</string>
    <string name="add_member">Add Member</string>
    <string name="exit_group">Exit Group</string>
    <string name="remove">Remove</string>
    <string name="group_image">Group Image</string>
    <string name="group_description">Group Description</string>
    <string name="group_settings">Group Settings</string>
    <string name="private_group">Private Group</string>
    <string name="mute_notifications">Mute Notifications</string>
    <string name="channels">Channels</string>
    <string name="channel_name">Channel Name</string>
    <string name="channel_description">Channel Description</string>
    <string name="channel_image">Channel Image</string>
    <string name="subscriber_count">%d subscribers</string>
    <string name="subscribe">Subscribe</string>
    <string name="create_channel">Create Channel</string>
    <string name="discover">Discover</string>
    <string name="my_channels">My Channels</string>
    <string name="voice_message">Voice message</string>
    <string name="recording">Recording</string>
    <string name="slide_to_cancel">Slide to cancel</string>
    <string name="emoji">Emoji</string>
    <string name="attachment">Attachment</string>
    <string name="add_photo">Add photo</string>
    <string name="calling">Calling…</string>
    <string name="ringing">Ringing</string>
    <string name="call_connected">Connected</string>
    <string name="delete_message">Delete message?</string>
    <string name="delete_message_description">This action cannot be undone</string>
    <string name="delete_for_me">Delete for me</string>
    <string name="delete_for_everyone">Delete for everyone</string>
    <string name="onboarding_image">Onboarding illustration</string>
    <string name="onboarding_title">Welcome to EZ Talk</string>
    <string name="onboarding_description">Connect with friends and family</string>
    <string name="all">All</string>
    <string name="messages">Messages</string>
    <string name="no_results">No Results Found</string>
    <string name="empty_message">Try a different search term</string>
    <string name="play">Play</string>
    <string name="play_video">Play video</string>
    <string name="video_message">Video message</string>
    <string name="location">Location</string>
    <string name="location_message">Location message</string>
    <string name="image_message">Image</string>
    <string name="file_attachment">File</string>
    <string name="contact">Contact</string>
    <string name="share_content">Share content</string>
    <string name="toggle_video">Video on/off</string>
    <string name="mute_mic">Mute microphone</string>
    <string name="switch_camera">Switch camera</string>
    <string name="your_video">Your video</string>
    <string name="call">Call</string>
    <string name="download">Download</string>
    <string name="share">Share</string>
    <string name="description">Description</string>
    <string name="empty_state">No data available</string>
    <string name="document">document</string>
    <string name="gallery">gallery</string>
    <string name="camera">camera</string>
    <string name="audio">audio</string>
    <string name="change_photo">Change Photo</string>
    <string name="account">Account</string>
    <string name="privacy">Privacy</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="contact_name">Contact Name</string>
    <string name="call_info">Call Info</string>
    <string name="result_title">Result Title</string>
    <string name="result_subtitle">Result Subtitle</string>
    <string name="time">Time</string>
    <string name="notifications">Notifications</string>
    <string name="forgot_password_icon" />
    <string name="email_icon" />
    <string name="channel_avatar">Channel Avatar</string>
    <string name="status_message">Status Message</string>
    <string name="image">Image</string>
    <string name="appearance">Appearance</string>
    <string name="language">Language</string>
    <string name="avatar">Avatar</string>
    <string name="call_type">Call Type</string>
    <string name="type_indicator">Type Indicator</string>
    <string name="action">Action</string>
    <string name="get_started">Get Started</string>
    <string name="select_language">Select Language</string>
    <string name="language_changed">Language changed successfully</string>
    <string name="dark_mode_enabled">Dark mode enabled</string>
</resources>