<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/home" />

    <item
        android:id="@+id/navigation_chats"
        android:icon="@drawable/ic_chat"
        android:title="@string/chats" />

    <item
        android:id="@+id/navigation_calls"
        android:icon="@drawable/ic_phone"
        android:title="@string/calls" />

    <item
        android:id="@+id/navigation_contacts"
        android:icon="@drawable/ic_contacts"
        android:title="@string/contacts" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile" />

</menu>