<?xml version="1.0" encoding="utf-8"?>
<!--suppress ALL -->
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_bottom_tabs"
    app:startDestination="@id/navigation_home">

    <!-- Home Fragment -->
    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.project_ez_talk.fragment.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_home_to_profile"
            app:destination="@id/navigation_profile" />

        <action
            android:id="@+id/action_home_to_settings"
            app:destination="@id/settingsActivity" />

        <action
            android:id="@+id/action_home_to_chat_detail"
            app:destination="@id/chatDetailActivity" />
    </fragment>

    <!-- Chats Fragment -->
    <fragment
        android:id="@+id/navigation_chats"
        android:name="com.example.project_ez_talk.fragment.ChatListFragment"
        android:label="@string/chats"
        tools:layout="@layout/fragment_chat_list">

        <action
            android:id="@+id/action_chats_to_chat_detail"
            app:destination="@id/chatDetailActivity" />

        <action
            android:id="@+id/action_chats_to_profile"
            app:destination="@id/navigation_profile" />
    </fragment>

    <!-- Calls Fragment -->
    <fragment
        android:id="@+id/navigation_calls"
        android:name="com.example.project_ez_talk.fragment.CallsFragment"
        android:label="@string/calls"
        tools:layout="@layout/fragment_calls">

        <action
            android:id="@+id/action_calls_to_call"
            app:destination="@id/callActivity" />
    </fragment>

    <!-- Contacts Fragment -->
    <fragment
        android:id="@+id/navigation_contacts"
        android:name="com.example.project_ez_talk.fragment.ContactsFragment"
        android:label="@string/contacts"
        tools:layout="@layout/fragment_contacts">

        <action
            android:id="@+id/action_contacts_to_chat_detail"
            app:destination="@id/chatDetailActivity" />

        <action
            android:id="@+id/action_contacts_to_profile"
            app:destination="@id/navigation_profile" />
    </fragment>

    <!-- Profile Fragment -->
    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.project_ez_talk.fragment.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile">

        <action
            android:id="@+id/action_profile_to_settings"
            app:destination="@id/settingsActivity" />

        <action
            android:id="@+id/action_profile_to_edit"
            app:destination="@id/editProfileActivity" />
    </fragment>

    <!-- Activities (as destinations) -->
    <activity
        android:id="@+id/chatDetailActivity"
        android:name="com.example.project_ez_talk.ui.chat.detail.ChatDetailActivity"
        android:label="@string/chats"
        tools:layout="@layout/activity_chat_detail" />

    <activity
        android:id="@+id/settingsActivity"
        android:name="com.example.project_ez_talk.ui.profile.SettingsActivity"
        android:label="@string/settings"
        tools:layout="@layout/activity_settings" />

    <activity
        android:id="@+id/editProfileActivity"
        android:name="com.example.project_ez_talk.ui.profile.EditProfileActivity"
        android:label="@string/edit_profile"
        tools:layout="@layout/activity_edit_profile" />

    <activity
        android:id="@+id/callActivity"
        android:name="com.example.project_ez_talk.ui.call.ongoing.CallActivity"
        android:label="@string/call"
        tools:layout="@layout/activity_voice_call" />

    <activity
        android:id="@+id/incomingCallActivity"
        android:name="com.example.project_ez_talk.ui.call.incoming.IncomingCallActivity"
        android:label="@string/incoming_call"
        tools:layout="@layout/activity_incoming_call" />

</navigation>