<?xml version="1.0" encoding="utf-8"?>
<!--suppress ALL -->
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/selectableItemBackground"
    android:padding="@dimen/spacing_medium">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/iv_avatar"
        android:layout_width="@dimen/avatar_size_medium"
        android:layout_height="@dimen/avatar_size_medium"
        android:src="@drawable/ic_person"
        android:scaleType="center"
        android:background="@color/primary_purple_light"
        android:padding="8dp"
        app:tint="@color/text_primary"
        app:strokeColor="@color/divider"
        app:strokeWidth="1dp"
        app:shapeAppearanceOverlay="@style/CircleImageStyle"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/avatar" />

    <ImageView
        android:id="@+id/iv_type_indicator"
        android:layout_width="@dimen/icon_size_tiny"
        android:layout_height="@dimen/icon_size_tiny"
        android:src="@drawable/ic_chat"
        android:background="@drawable/bg_circle"
        android:backgroundTint="@color/primary_purple"
        android:padding="2dp"
        app:tint="@color/text_primary"
        app:layout_constraintBottom_toBottomOf="@id/iv_avatar"
        app:layout_constraintEnd_toEndOf="@id/iv_avatar"
        android:contentDescription="@string/type_indicator" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/result_title"
        android:textSize="@dimen/text_size_body"
        android:textColor="@color/text_primary"
        android:fontFamily="sans-serif-medium"
        android:maxLines="1"
        android:ellipsize="end"
        android:layout_marginStart="@dimen/spacing_normal"
        android:layout_marginEnd="@dimen/spacing_small"
        app:layout_constraintTop_toTopOf="@id/iv_avatar"
        app:layout_constraintStart_toEndOf="@id/iv_avatar"
        app:layout_constraintEnd_toStartOf="@id/tv_time" />

    <TextView
        android:id="@+id/tv_subtitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/result_subtitle"
        android:textSize="@dimen/text_size_body"
        android:textColor="@color/text_secondary"
        android:maxLines="1"
        android:ellipsize="end"
        android:layout_marginStart="@dimen/spacing_normal"
        android:layout_marginTop="@dimen/spacing_tiny"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        app:layout_constraintStart_toEndOf="@id/iv_avatar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/iv_avatar" />

    <TextView
        android:id="@+id/tv_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time"
        android:textSize="@dimen/text_size_caption"
        android:textColor="@color/text_hint"
        app:layout_constraintTop_toTopOf="@id/iv_avatar"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>