<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/spacing_large">

    <ImageView
        android:id="@+id/iv_onboarding"
        android:layout_width="280dp"
        android:layout_height="280dp"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tv_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        android:contentDescription="@string/onboarding_image" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/onboarding_title"
        android:textSize="@dimen/text_size_headline"
        android:textColor="@color/text_primary"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:layout_marginTop="@dimen/spacing_xlarge"
        app:layout_constraintTop_toBottomOf="@id/iv_onboarding"
        app:layout_constraintBottom_toTopOf="@id/tv_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tv_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/onboarding_description"
        android:textSize="@dimen/text_size_body_large"
        android:textColor="@color/text_secondary"
        android:gravity="center"
        android:layout_marginTop="@dimen/spacing_medium"
        android:layout_marginBottom="@dimen/spacing_xxlarge"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>